# Sonosano

./: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml
.husky/: pre-push
app/: index.html  renderer.tsx  vite-env.d.ts
app/api/: apiClient.ts  backendUrl.ts
app/components/LyricsDisplay/: LyricsDisplay.module.css  LyricsDisplay.tsx
app/components/MetadataModal/: MetadataModal.tsx  (+1 more)
app/global/: global.ts
app/hooks/: useContextMenu.ts  useDownloads.ts  useLibrarySongs.ts  useLocalStorage.ts  usePlaybackManager.ts  usePlaylistPlayback.ts  useSoulseekSearchStream.ts
app/i18n/: i18n.ts  languages.ts
app/lib/: systemAdapter.ts
app/providers/: PlaybackProvider.tsx  SearchTabProvider.tsx  SongDetailSidebarProvider.tsx
app/renderer/: App.tsx  app.module.css  index.css  index.ejs  index.tsx
app/services/: lyricsService.ts  songDataService.ts
app/styles/: buttons.global.css  globals.css
app/types/: index.ts
app/utils/: colorExtraction.ts  constants.ts  coverCache.ts  downloadEvents.ts  fileSorter.ts  format.ts  language.ts  metadata.ts  sessionCache.ts  statusUtils.tsx  systemAdapter.ts
backend/: requirements.txt  sonosano.spec
backend/src/: main.py
scripts/: build-appimage.sh  build-backend.js  build-offline.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+102 files in other folders)
